# solo-saving

./: .biomeignore  .gitignore  .pre-commit-config.yaml  README.md  biome.json  docker-compose.yml
.agent/rules/: general.md  git.md
.agent/workflows/: database-setup.md
.github/workflows/: _backend-ci.yml  _frontend-ci.yml  backend-ci.yml  ci.yml  frontend-ci.yml  main.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  0db90b21cb28_add_total_cost_jpy_to_asset.py  82f381290557_add_transactions_table.py
backend/app/: __init__.py  database.py  models.py  routers.py  schemas.py  seed.py  seed_history.py  stock_router.py
backend/app/routers/: __init__.py  assets.py  cash.py  categories.py  dashboard.py  goals.py  snapshots.py
backend/app/schemas/: __init__.py  asset.py  category.py  dashboard.py  goal.py  history.py  price_history.py  snapshot.py
backend/app/services/: __init__.py  yfinance_service.py
backend/scripts/: rebuild_data.py  recalc_snapshots.py  seed_recent.py  update_daily.py
backend/src/: main.py
docs/: README.md  architecture_spec.md  aws_architecture.drawio  ci-cd-workflow.md  database-schema.md  docker_and_cache_explanation.md  environment-variables.md  git.md  github-actions-security.md  ide-selection.md  purchase-flow-specification.md  requirements.md  rls-decision.md  technology-comparison.md
frontend/: Dockerfile  biome.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AreaChart.tsx  AssetBreakdownItem.tsx  Footer.tsx  (+12 more)
(+8 files in other folders)
