[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend with uv"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "yfinance>=0.2.40",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
# B008: FastAPI の Depends(), Query() パターンで誤検知するため除外
ignore = ["B008"]
